исправить размеры картинок в main и удалить бордер

--- a/assets/styles/style_2.css
+++ b/assets/styles/style_2.css
@@ -23,11 +23,37 @@ li {
     align-items: center
 }
 
-.container span img {
-    width: 200px;
-    height: auto;
-    border: 1px solid #000000;
+.container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 70vh;
 }
+
+
+#cards {
+    max-width: 400px;
+    height: 80%;
+}
+
+#chronos {
+    max-width: 300px;
+    height: 80%;
+}
+
+#dagger {
+    max-width: 250px;
+    height: 80%;
+}
+
+#nimbus {
+    max-width: 300px;
+    height: 80%;
+}
+
+
+
 
 a {
     text-decoration: none;
